--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-table": "^8.21.3",
     "apexcharts": "^5.3.4",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
+    "framer-motion": "^12.25.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "lucide-react": "^0.541.0",
@@ -31,7 +35,7 @@
     "react-select": "^5.10.2",
     "recharts": "^3.1.2",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.12",
     "yup": "^1.7.0"
   },
@@ -39,6 +43,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0"
+    "eslint-config-next": "15.5.0",
+    "tw-animate-css": "^1.4.0"
   }
 }
